@@ -16,6 +16,7 @@
 * Possibility to open multiple clue groups when a the contest starts
 * Open clue groups conditionaly whena key is entered
 * Display hint price on the 'buy hint' button
+* Chroust: checks for keys/IDs duplicities
 
 rel 0.1.6
 * HQ: table - hyperlinks in popup info 
